--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "start:json-server": "npx json-server data/db.json"
+    "start:json-server": "npx json-server data/db.json",
+    "todo": "grep 'TODO' -n -r ./src "
   },
   "dependencies": {
     "axios": "^1.7.5",
